--- a/index.html
+++ b/index.html
@@ -1,116 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>AriaHQ — Focus Preview</title>
-<style>
-:root{
-  --bg:#ffffff;
-  --text:#0f1418;
-  --muted:#5b6166;
-  --border:#eef0f2;
-  --accent1:#10A37F;
-  --accent2:#1A7F64;
-  --card:#ffffff;
-  --shadow:0 12px 32px rgba(16,163,127,.06), 0 2px 6px rgba(0,0,0,.04);
-  --radius:18px;
-  --maxw:1160px;
-}
-*{box-sizing:border-box}
-html,body{margin:0;padding:0}
-body{background:var(--bg);color:var(--text);font:16px/1.6 Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial}
-.header{
-  position:sticky; top:0; z-index:10;
-  background:rgba(255,255,255,.9); backdrop-filter:saturate(120%) blur(8px);
-  border-bottom:1px solid var(--border);
-}
-.header-inner{max-width:var(--maxw);margin:0 auto;padding:18px 24px;display:flex;align-items:center;gap:18px;justify-content:space-between}
-.brand{display:flex;align-items:center;gap:12px}
-.logo{width:30px;height:30px;border-radius:8px;background:linear-gradient(100deg,var(--accent1),var(--accent2));display:grid;place-items:center;color:white;font-weight:700}
-.nav{display:flex;gap:14px}
-.nav a{padding:8px 12px;border-radius:10px;color:var(--muted);text-decoration:none}
-.nav a.active,.nav a:hover{background:#f6f8f9;color:var(--text)}
-.btn{border:1px solid var(--border);background:white;color:var(--text);padding:10px 14px;border-radius:999px;cursor:pointer}
-.btn-primary{border:none;background:linear-gradient(120deg,var(--accent1),var(--accent2));color:white;box-shadow:0 10px 26px rgba(16,163,127,.22)}
-
-.main{max-width:var(--maxw);margin:0 auto;padding:28px 24px 40px}
-.section{margin:24px 0}
-.card{
-  background:var(--card);
-  border:1px solid var(--border);
-  border-radius:var(--radius);
-  box-shadow:var(--shadow);
-  padding:20px;
-}
-.hero{
-  display:grid;grid-template-columns:1.2fr .8fr;gap:24px;align-items:center;
-}
-.hero h1{margin:0 0 6px;font-size:28px;letter-spacing:-0.02em}
-.hero p{margin:0;color:var(--muted)}
-
-.kpis{display:grid;grid-template-columns:repeat(2,1fr);gap:20px;margin-top:6px}
-.kpi .value{font-size:34px;font-weight:800;letter-spacing:-0.02em}
-.kpi .spark{height:44px}
-
-.figure{height:360px;border:1px solid var(--border);border-radius:16px;background:linear-gradient(180deg,#fff,#fafbfd);display:flex;align-items:center;justify-content:center;position:relative}
-.figure svg{width:100%;height:100%;}
-.fig-legend{position:absolute;top:12px;right:12px;display:flex;gap:10px;font-size:12px;color:var(--muted)}
-.dot{width:8px;height:8px;border-radius:999px;display:inline-block}
-.dot.rev{background:#10A37F}.dot.gm{background:#1A7F64}
-
-.twocol{display:grid;grid-template-columns:1fr 1fr;gap:24px}
-.list{list-style:none;margin:0;padding:0;display:grid;gap:10px}
-.item{display:flex;align-items:center;gap:10px;padding:10px 12px;border:1px solid var(--border);border-radius:12px;background:#fff}
-.badge{padding:4px 10px;border-radius:999px;background:#eef7f4;color:#0f6f57;font-size:12px;margin-left:auto}
-.helper{font-size:13px;color:var(--muted);margin-top:6px}
-
-footer{max-width:var(--maxw);margin:32px auto;padding:12px 24px;color:var(--muted);font-size:12px;border-top:1px solid var(--border)}
-@media (max-width: 980px){
-  .hero{grid-template-columns:1fr}
-  .twocol{grid-template-columns:1fr}
-}
-</style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>AriaHQ — White Focus UI</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="header">
     <div class="header-inner">
-      <div class="brand"><div class="logo">A</div><strong>AriaHQ</strong></div>
+      <div class="brand">
+        <div class="logo">A</div>
+        <div class="brand-text">
+          <strong>AriaHQ</strong>
+          <span>Financial OS</span>
+        </div>
+      </div>
       <nav class="nav">
         <a class="active" href="#">Dashboard</a>
         <a href="#">Reports</a>
         <a href="#">Forecast</a>
         <a href="#">Budget</a>
+        <a href="#">Approvals</a>
       </nav>
       <div class="cta">
         <button class="btn">Connect QBO</button>
-        <button class="btn btn-primary">Generate Deck</button>
+        <button class="btn btn-primary" onclick="alert('Deck generator is stubbed for this static preview.')">Generate Deck</button>
       </div>
     </div>
   </header>
 
   <main class="main">
     <section class="hero">
-      <div class="copy">
+      <div class="copy card">
         <h1>Your financial pulse — at a glance</h1>
         <p>Fewer widgets, more clarity. A single hero chart, two KPIs, and the next three things that matter.</p>
         <div class="kpis">
-          <div class="card kpi">
-            <div style="display:flex;justify-content:space-between;align-items:center">
-              <strong>Revenue (MTD)</strong><span class="badge">+8.2%</span>
+          <div class="kpi card">
+            <div class="kpi-head">
+              <strong>Revenue (MTD)</strong>
+              <span class="badge up">+8.2%</span>
             </div>
             <div class="value">$482,300</div>
-            <svg class="spark" viewBox="0 0 300 44" preserveAspectRatio="none">
+            <svg class="spark" viewBox="0 0 300 44" preserveAspectRatio="none" aria-hidden="true">
               <polyline fill="none" stroke="#10A37F" stroke-width="3"
                 points="0,36 40,35 80,34 120,31 160,26 200,22 240,18 280,15 300,14"/>
             </svg>
           </div>
-          <div class="card kpi">
-            <div style="display:flex;justify-content:space-between;align-items:center">
-              <strong>Gross Margin</strong><span class="badge">Target 56–60%</span>
+          <div class="kpi card">
+            <div class="kpi-head">
+              <strong>Gross Margin</strong>
+              <span class="badge neutral">Target 56–60%</span>
             </div>
             <div class="value">58.4%</div>
-            <svg class="spark" viewBox="0 0 300 44" preserveAspectRatio="none">
+            <svg class="spark" viewBox="0 0 300 44" preserveAspectRatio="none" aria-hidden="true">
               <rect width="300" height="44" fill="#f6f8f9"/>
               <polyline fill="none" stroke="#1A7F64" stroke-width="3"
                 points="0,28 40,28 80,27 120,25 160,24 200,23 240,22 280,21 300,20"/>
@@ -118,13 +61,21 @@ footer{max-width:var(--maxw);margin:32px auto;padding:12px 24px;color:var(--mute
           </div>
         </div>
       </div>
+
       <div class="figure card">
-        <div class="fig-legend">
-          <span><span class="dot rev"></span> Revenue</span>
-          <span><span class="dot gm"></span> GM%</span>
+        <div class="fig-head">
+          <div class="legend">
+            <span><i class="dot rev"></i> Revenue</span>
+            <span><i class="dot gm"></i> GM%</span>
+          </div>
+          <div class="fig-cta">
+            <button class="btn sm">1M</button>
+            <button class="btn sm active">3M</button>
+            <button class="btn sm">12M</button>
+          </div>
         </div>
         <!-- Combined hero chart (Revenue area + GM line) -->
-        <svg viewBox="0 0 680 360" preserveAspectRatio="none">
+        <svg viewBox="0 0 680 360" preserveAspectRatio="none" role="img" aria-label="Revenue and gross margin over time">
           <defs>
             <linearGradient id="rev" x1="0" x2="0" y1="0" y2="1">
               <stop offset="0" stop-color="#10A37F" stop-opacity=".35"/>
@@ -142,34 +93,55 @@ footer{max-width:var(--maxw);margin:32px auto;padding:12px 24px;color:var(--mute
           <line x1="0" y1="260" x2="680" y2="260" stroke="#f3f5f6"/>
           <line x1="0" y1="180" x2="680" y2="180" stroke="#f3f5f6"/>
         </svg>
+        <div class="fig-meta">
+          <div class="note">Trend improving — projected +$94k this quarter</div>
+          <div class="actions">
+            <button class="btn">Run Upside</button>
+            <button class="btn">Run Downside</button>
+            <button class="btn btn-primary">New Scenario</button>
+          </div>
+        </div>
       </div>
     </section>
 
     <section class="section twocol">
       <div class="card">
-        <strong>Top 3 things to know</strong>
+        <div class="card-head">
+          <strong>Top 3 things to know</strong>
+          <span class="helper">Aria curates three high-impact items daily.</span>
+        </div>
         <ul class="list">
-          <li class="item">COGS rose in 2 SKUs — supplier price ↑ 3% <span class="badge">Investigate</span></li>
+          <li class="item">COGS rose in 2 SKUs — supplier price ↑ 3% <span class="badge warn">Investigate</span></li>
           <li class="item">AR Days +5 — 2 enterprise invoices late <span class="badge">Collect</span></li>
           <li class="item">Upside scenario could add +$94k this quarter <span class="badge">Simulate</span></li>
         </ul>
-        <div class="helper">Aria prioritizes only three items per day to reduce noise.</div>
       </div>
       <div class="card">
-        <strong>Approvals</strong>
-        <div class="helper" style="margin:6px 0 10px">Budget progress across teams</div>
-        <svg viewBox="0 0 520 80" style="width:100%">
+        <div class="card-head">
+          <strong>Approvals</strong>
+          <span class="helper">Budget progress across teams</span>
+        </div>
+        <svg viewBox="0 0 520 80" style="width:100%" aria-hidden="true">
           <rect x="10" y="42" width="500" height="10" fill="#eef0f2" rx="5"/>
           <rect x="10" y="42" width="340" height="10" fill="#10A37F" rx="5"/>
           <circle cx="350" cy="47" r="11" fill="#10A37F"/>
           <text x="370" y="51" font-size="13" fill="#5b6166">68% sections approved</text>
         </svg>
+        <table class="table">
+          <tr><th>Section</th><th>Owner</th><th>Due</th><th>Status</th></tr>
+          <tr><td>Marketing</td><td>@alex</td><td>Aug 25</td><td><span class="status warn">Changes Requested</span></td></tr>
+          <tr><td>Sales</td><td>@sam</td><td>Aug 26</td><td><span class="status">Pending Approval</span></td></tr>
+          <tr><td>Ops</td><td>@jordan</td><td>Aug 28</td><td><span class="status neutral">Draft</span></td></tr>
+        </table>
       </div>
     </section>
   </main>
 
-  <footer>
-    Static visual preview — white, quiet, visual-first. Fewer widgets, larger charts, more breathing room.
+  <footer class="footer">
+    <div class="footer-inner">
+      <span>Static visual preview — white, quiet, visual-first.</span>
+      <span>© AriaHQ</span>
+    </div>
   </footer>
 </body>
 </html>
